--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,12 @@
 autopep8==1.4.4
+cloudpickle==1.2.2
+future==0.18.2
+gym==0.15.4
+nest-asyncio==1.3.3
 numpy==1.18.1
+opencv-python==4.1.2.30
 pycodestyle==2.5.0
+pyglet==1.3.2
+scipy==1.4.1
+six==1.13.0
+telnetlib3==1.0.2
