--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,32 @@
 autopep8==1.4.4
+click==7.1.2
 cloudpickle==1.2.2
+dnspython==1.16.0
+dominate==2.5.1
+eventlet==0.25.2
+Flask==1.1.2
+Flask-Bootstrap==3.3.7.1
+Flask-SocketIO==4.3.0
+Flask-WTF==0.14.3
 future==0.18.2
+greenlet==0.4.15
+gunicorn==20.0.4
 gym==0.15.4
+itsdangerous==1.1.0
+Jinja2==2.11.2
+MarkupSafe==1.1.1
+monotonic==1.5
 nest-asyncio==1.3.3
 numpy==1.18.1
 opencv-python==4.1.2.30
 pycodestyle==2.5.0
 pyglet==1.3.2
+python-engineio==3.12.1
+python-socketio==4.5.1
+redis==3.5.2
 scipy==1.4.1
 six==1.13.0
 telnetlib3==1.0.2
+visitor==0.1.3
+Werkzeug==1.0.1
+WTForms==2.3.1
