--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ Flask-Bootstrap==3.3.7.1
 Flask-SocketIO==4.3.0
 Flask-WTF==0.14.3
 future==0.18.2
+gevent==20.5.0
 greenlet==0.4.15
 gunicorn==20.0.4
 gym==0.15.4
@@ -27,6 +28,7 @@ redis==3.5.2
 scipy==1.4.1
 six==1.13.0
 telnetlib3==1.0.2
+uuid==1.30
 visitor==0.1.3
 Werkzeug==1.0.1
 WTForms==2.3.1
